# transcript_editor

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  tsconfig.tests.json  vite.config.ts  wrangler.toml
.github/ISSUE_TEMPLATE/: tweaks-and-improvements.md
.github/workflows/: codecov.yml
backend/: pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: transcript.py
backend/app/core/: config.py
backend/app/models/: database.py  transcript.py
backend/app/services/: db_service.py  export_service.py  llm_service.py  transcript_service.py  utils.py  whisper_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
scripts/: pocketbase_start.sh
shared/: endpoints.ts  transcript.ts  utils.ts
src/: App.tsx  main.tsx  theme.ts
src/components/: AudioPlayer.tsx  AudioUpload.tsx  Layout.tsx  RecentTranscripts.tsx  SegmentEditor.tsx
src/models/: transcript.ts
src/pages/: HomePage.tsx  TranscriptEditPage.tsx
src/services/: api.ts  cloudfare_sdk.ts  cloudflare_sdk.ts  interfaces.ts  sdk.ts  word_exporter.ts
src/utils/: word_count.ts
tests/: AudioPlayer.test.tsx  RecentTranscripts.test.tsx  SegmentEditor.test.tsx  TranscriptEditPage.test.tsx  deepgram_transcriber.test.ts  mockAPI.ts  mockRender.tsx  setup.tsx  transformer.test.ts  vitest.setup.ts  word_exporter.test.ts
tests/frontend/: AudioPlayer.test.tsx  (+3 more)
worker/: deepgram_transcriber.ts  gemini_transform.ts  index.ts  whisper_transcriber.ts
(+28 files in other folders)
